<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_line_follower</name>
  <version>0.0.0</version>
  <description>A simple PID controlled line follower bot used to depict the examples of unit testable code, and good and bad unit tests</description>
  <maintainer email="gaurav@blackcoffeerobotics.com">gaurav</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>lcov</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
